kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ip-dashboard
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        # hosts are restricted and need to be apply for in the project application.
        # hosts has to be prefixed with namespace/
        - "ip-dashboard/ipdashboard.uni-muenster.de"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        minProtocolVersion: TLSV1_3
        # credentialName has to be prefixed with namespace--
        credentialName: ip-dashboard--ipdash-certificate
      hosts:
        # hosts are restricted and need to be apply for in the project application.
        # hosts has to be prefixed with namespace/
        - "ip-dashboard/ipdashboard.uni-muenster.de"
